--- a/public/demo-categories/interior-design/services.html
+++ b/public/demo-categories/interior-design/services.html
@@ -181,7 +181,7 @@ page-title -->
 
 
 <!--=================================
- solutions-->
+ services-->
 
 <section class="page-section-ptb">
   <div class="container">
